Alt+Tab broken for 'sloppy' focus mode on Wayland
First off, I hope I am opening the issue against the correct project -- I have no idea how to figure out which component is at fault. Note that the issue happen only on Wayland, not when using Xorg.
I am using GNOME 3.34 on Fedora 31. When I use Alt-Tab to switch to another terminal, the new window gets a focus for a very short time (one can see this because the terminal cursor character turns filled again) and then very shortly after (without moving the mouse at all) the window below the mouse cursor gets the focus.
Steps to reproduce:
- Enable sloppy focus mode
- Open gedit and a terminal (tile them to the left and right screen half)
- Position the mouse cursor over the left window
- Use Alt-Tab to switch to the window on the right
- Watch the focus going back to the left window